fix(login): enhance title styling with gradient and text clipping for improved visual appeal

--- a/src/app/features/login/login-image/login-image.component.scss
+++ b/src/app/features/login/login-image/login-image.component.scss
@@ -58,6 +58,12 @@
       width: 80%;
 
       .title {
+        color: #880e4f;
+        background-image: linear-gradient(45deg, #c6c2ff, #8664e3 33%, #4718c7 67%, #100442 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        display: inline-block;
         font-size: 12vw;
         font-weight: 900;
         opacity: 0;
